# mirror-app

./: .gitignore  MIRROR_APP_PROJECT.md  README.md  package-lock.json  package.json  turbo.json
apps/android-agent/: settings.gradle.kts
apps/android-agent/app/: build.gradle.kts
apps/android-agent/app/src/main/: AndroidManifest.xml
apps/android-agent/app/src/main/java/dev/phantommirror/agent/: MainActivity.kt  WebSocketClient.kt
apps/android-agent/app/src/main/res/values/: styles.xml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  h264decoder.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: adb.rs  extended_display.rs  ios_airplay.rs  lib.rs  main.rs  stream_bridge.rs  wifi_discovery.rs
apps/desktop/src/components/: DeviceGrid.tsx  DeviceSidebar.tsx  DeviceWindow.tsx  ExtendedDisplayWindow.tsx  StreamCanvas.tsx  TopBar.tsx  TouchOverlay.tsx
apps/desktop/src/services/: adb.service.ts  canvasRegistry.ts  extendedDisplay.service.ts  h264.decoder.ts
apps/desktop/src/stores/: deviceStore.ts
docs/: IOS_SETUP.md  SETUP.md
tools/scripts/: build-uxplay.ps1  build-uxplay.sh  download-scrcpy-server.mjs  download-uxplay-prebuilt.mjs  download-uxplay.mjs  test-stream.mjs
tools/uxplay/: compile_commands.json
