[package]
name = "phantom-mirror"
version = "0.1.0"
description = "Multi-device phone and tablet mirroring desktop app."
authors = ["PhantomMirror"]
edition = "2021"

[lib]
name = "phantom_mirror_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.1", features = [] }
tokio = { version = "1.45.0", features = ["process", "rt-multi-thread", "macros"] }
