[package]
name = "phantom-mirror"
version = "0.1.0"
description = "Multi-device phone and tablet mirroring desktop app."
authors = ["PhantomMirror"]
edition = "2021"

[lib]
name = "phantom_mirror_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
bytes = "1"
futures-util = "0.3"
mdns-sd = "0.11"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.1", features = [] }
tokio = { version = "1.45.0", features = ["io-util", "net", "process", "rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.21"
